test/extended/testdata/ingress.yaml
kind: List
apiVersion: v1
items:
# an ingress that should be captured as three routes
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: test
  spec:
    tls:
    - hosts:
      - 3.ingress-test.com
      secretName: ingress-endpoint-secret
    rules:
    - host: 1.ingress-test.com
      http:
        paths:
        - path: /test
          backend:
            serviceName: ingress-endpoint-1
            servicePort: 80
        - path: /other
          backend:
            serviceName: ingress-endpoint-2
            servicePort: 80
    - host: 2.ingress-test.com
      http:
        paths:
        - path: /
          backend:
            serviceName: ingress-endpoint-1
            servicePort: 80
    - host: 3.ingress-test.com
      http:
        paths:
        - path: /
          backend:
            serviceName: ingress-endpoint-1
            servicePort: 80
# an empty secret
- apiVersion: v1
  kind: Secret
  metadata:
    name: ingress-endpoint-secret
  type: kubernetes.io/tls
  stringData:
    tls.key: ""
    tls.crt: ""
# a service to be routed to
- apiVersion: v1
  kind: Service
  metadata:
    name: ingress-endpoint-1
  spec:
    selector:
      app: ingress-endpoint-1
    ports:
    - port: 80
      targetPort: 8080
# a service to be routed to
- apiVersion: v1
  kind: Service
  metadata:
    name: ingress-endpoint-2
  spec:
    selector:
      app: ingress-endpoint-2
    ports:
    - port: 80
      targetPort: 8080
# a pod that serves a response
- apiVersion: v1
  kind: Pod
  metadata:
    name: ingress-endpoint-1
    labels:
      app: ingress-endpoint-1
  spec:
    terminationGracePeriodSeconds: 1
    containers:
    - name: test
      image: openshift/hello-openshift
      ports:
      - containerPort: 8080
        name: http
      - containerPort: 100
        protocol: UDP
# a pod that serves a response
- apiVersion: v1
  kind: Pod
  metadata:
    name: ingress-endpoint-2
    labels:
      app: ingress-endpoint-2
  spec:
    terminationGracePeriodSeconds: 1
    containers:
    - name: test
      image: openshift/hello-openshift
      ports:
      - containerPort: 8080
        name: http
      - containerPort: 100
        protocol: UDP
